@@ -2,7 +2,7 @@ import com.twilio.Twilio;
 import com.twilio.rest.api.v2010.account.Message;
 
 import java.net.URI;
-import java.util.Arrays;
+import java.util.List;
 
 public class SendWhats {
     private final String bodyMessage;
@@ -18,7 +18,7 @@ public class SendWhats {
                         new com.twilio.type.PhoneNumber("whatsapp:" + Constants.WHATS_NUMBER),
                         "Hola Stephanie, bonito dia." + bodyMessage)
                 .setMediaUrl(
-                        Arrays.asList(URI.create(Constants.IMAGE_BULL)))
+                        List.of(URI.create(Constants.IMAGE_BULL)))
                 .create();
         System.out.println(message.getBody());
     }
@@ -27,15 +27,15 @@ public class SendWhats {
         final Message message = Message.creator(
                         new com.twilio.type.PhoneNumber("whatsapp:" + Constants.ME_NUMBER),
                         new com.twilio.type.PhoneNumber("whatsapp:" + Constants.WHATS_NUMBER),
-                        "Hey Dyno." + bodyMessage)
+                        " Hey Dyno." + bodyMessage)
                 .setMediaUrl(
-                        Arrays.asList(URI.create(Constants.IMAGE_BULL)))
+                        List.of(URI.create(Constants.IMAGE_BULL)))
                 .create();
         System.out.println(message.getBody());
     }
 
     public void sentAllWhats() {
         sendWhatsToMe();
-//        sendWhatsToStep();
+        sendWhatsToStep();
     }
 }
